# Private

./: README.md
Test_Bash/: Code.sh
Test_C/: Application  Application.c  Application.h  Main.c  Makefile
Test_C++/: CMakeLists.txt  __CMakeLists.txt
Test_C++/.cache/clangd/index/: Company.cpp.76A08B929C90D202.idx  Company.cpp.B2BB80066A9ABA35.idx  Company.cpp.F759756217180A0F.idx  Company.hpp.268F5702FACDA035.idx  Company.hpp.5CD5D14BE5D33667.idx  Company.hpp.E0782B1E304444AC.idx  Company_Test.cpp.7BEDFC3EC235B091.idx  Company_Test.cpp.A3C1969F0163508D.idx  DataBase.cpp.3E3E2FBA4F317032.idx  DataBase.hpp.6FEC39A855AB6161.idx  DataBase_Test.cpp.8DD58163425889FD.idx  Main.cpp.115D795356F1B2D1.idx  Main.cpp.198551C5A3F8A64E.idx  Main.cpp.AF0AC05D22241112.idx  Math.cpp.886DC3C1D66097E8.idx  Math.hpp.08B2B1BB2000809E.idx
Test_C++/Include/: Company.hpp  Test.h
Test_C++/Libraries/: CMakeLists.txt
Test_C++/Libraries/.cache/clangd/index/: Math.cpp.CB0F5D9574A6133C.idx  Math.hpp.EC76BED19883C3E0.idx
Test_C++/Libraries/CMake/: FindMyPackage-debug.cmake  FindMyPackage.cmake
Test_C++/Libraries/Include/: Math.hpp
Test_C++/Libraries/Source/: Math.cpp
Test_C++/Source/: Company.cpp  Company_Test.cpp  Main.cpp
Test_Py/: Program.py
